--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Developer Portfolio</title>
-</head>
-<body>
-    <header>
-
+    <link rel="stylesheet" href="style/style.css">
+  </head>
+  <body>
+    <header class="header">
+       <nav>
+        <h3 class="nav-title">Shih<span class="text-primary">a</span>b</h3>
+        <ul>
+            <li><a class="dark-2" href="https://github.com/">Portfolio</a></li>
+            <li><a class="dark-2" href="https://github.com/blog">Blog</a></li>
+            <li><button class="btn-primary"> <a href="https://github.com/blog">Hire Me</a></button></li>
+        </ul>
+       </nav>
+       <section class="banner">
+        <div class="banner-content">
+            <h4 class="banner-greetings">Hi, I <span class="text-primary">a</span>m</h4>
+            <h1 class="banner-title">Shih<span class="text-primary">a</span>b</h1>
+            <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p><br>
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+        <div>
+            <img  class="banner-profile" src="images/profile.png" alt="">
+        </div>
+       </section>
     </header>
     <main>
 
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer> 
+  </body>
 </html>
