--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    <header class="header">
+    <header class="header secondary-bg">
        <nav>
         <h3 class="nav-title">Shih<span class="text-primary">a</span>b</h3>
         <ul>
@@ -30,6 +30,30 @@
        </section>
     </header>
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+                <p class="section-description">I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Shihab Uddin</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">Shihab@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Bogura</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Today Date</p>
+                    <p class="item-description">8 january 2025 </p>
+                </div>
+            </div>
+    
+        </section>
 
     </main>
     <footer></footer> 
