added some file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <section class="about secondary-bg">
             <h3 class="section-title">About Me</h3>
-                <p class="section-description">I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <p class="section-description">I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p><br><br>
 
             <div class="about-items">
                 <div class="about-item">
@@ -54,7 +54,44 @@
             </div>
     
         </section>
+        
+        <!-- What I Do Section -->
+        <section class="skills">
+            <h3 class="section-title text-center">What I Do</h3>
+            <p class="section-description text-center sec-des">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="this is js image">
+                    <h4 class="skill-title">Java Script
+                    </h4>
+                    <p class="skill-description">I have 90% proficiency in Vanilla JavaScript, capable of building interactive web apps, handling DOM manipulation, asynchronous tasks, and optimizing performance without relying on external libraries.
 
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="this is react img">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">I have 83% proficiency in React, skilled in building dynamic, component-based UIs, managing state efficiently, and optimizing performance for scalable web applications.
+
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="this is node js img">
+                    <h4 class="skill-title">Node.js
+                    </h4>
+                    <p class="skill-description">I have 89% proficiency in Node.js, capable of building scalable server-side applications, handling requests, managing databases, and optimizing performance with asynchronous, non-blocking architecture.
+
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="this is Momgo DB img">
+                    <h4 class="skill-title">Mongo DB</h4>
+                    <p class="skill-description">I have 83% proficiency in MongoDB, skilled in designing flexible, schema-less databases, optimizing queries, and managing data in high-performance, scalable NoSQL environments.
+
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer> 
   </body>
