added some file

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h4 class="banner-greetings">Hi, I <span class="text-primary">a</span>m</h4>
             <h1 class="banner-title">Shih<span class="text-primary">a</span>b</h1>
             <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p><br>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-primary"> <a class="btn-s" href="images/profile.png" download="">Download CV</a> </button>
+            <button class="btn-secondary">Contact</button>
         </div>
         <div>
             <img  class="banner-profile" src="images/profile.png" alt="">
@@ -92,7 +92,98 @@
                 </div>
             </div>
         </section>
+
+        <section class="resume">
+            <h3 class="section-title text-center">A Summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education
+                    </h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering
+                        </h4>
+                        <h5 class="experience-sub-title">Harvard University / 2013 - 2017
+                        </h5>
+                        <div class="experience-description">Learning is a lifelong journey that unlocks potential, broadens horizons, and fosters growth. It fuels curiosity, builds confidence, and empowers individuals to achieve dreams.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Bachelor in Computer Engineering
+                        </h4>
+                        <h5 class="experience-sub-title">Harvard University / 2009 - 2013
+                        </h5>
+                        <div class="experience-description">Learning is a lifelong journey that unlocks potential, broadens horizons, and fosters growth. It fuels curiosity, builds confidence, and empowers individuals to achieve dreams.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Navanard College Computer Science</h4>
+                        <h5 class="experience-sub-title">Navanard College / 2009 - 2013</h5>
+                        <div class="experience-description">Learning is a lifelong journey that unlocks potential, broadens horizons, and fosters growth. It fuels curiosity, builds confidence, and empowers individuals to achieve dreams.</div>
+                    </div>
+                </div>
+
+
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience
+                    </h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer
+
+                        </h4>
+                        <h5 class="experience-sub-title">Apple Inc /2020 - Current</h5>
+
+                        <div class="experience-description">Learning is a lifelong journey that unlocks potential, broadens horizons, and fosters growth. It fuels curiosity, builds confidence, and empowers individuals to achieve dreams.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer
+                        </h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 2020
+                        </h5>
+                        <div class="experience-description">Learning is a lifelong journey that unlocks potential, broadens horizons, and fosters growth. It fuels curiosity, builds confidence, and empowers individuals to achieve dreams.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Intern</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 2018
+                        </h5>
+                        <div class="experience-description">Learning is a lifelong journey that unlocks potential, broadens horizons, and fosters growth. It fuels curiosity, builds confidence, and empowers individuals to achieve dreams.</div>
+                    </div>
+                </div>
+            </div>  
+            <div class="text-center resume-download-cv">
+                <button class="btn-primary"> <a class="btn-s" href="images/profile.png" download="">Download CV</a> </button>
+            </div>          
+        </section>
     </main>
-    <footer></footer> 
+    <footer>
+        <div class="footer-top">
+            <div id="footer-left" class="footer-column">
+                <h3 class="section-title footer-title">Let's Connect</h3>
+                <p class="section-description">
+                    Please fill out the form on this section to connect with me or call between 9.00 A.M and 8.00 P.M ET, Monday through Friday.
+                </p>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/icons/facebook.png" alt="facebook" /></a>
+                    <a href="https://x.com/" target="_blank"><img src="images/icons/twitter.png" alt="twitter" /></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="images/icons/insta.png" alt="instagram" /></a>
+                </div>
+            </div>
+            <div id="footer-right" class="footer-column">
+                <h3 class="section-title footer-title">Let's Message me</h3>
+                <form class="contact">
+                    <input type="text" placeholder="Your Name" />
+                    <input type="email" placeholder="Your Email" />
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                    <button class="btn-primary">Submit</button>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div>
+                <p class="footer-copy-right">&copy; 2025 Shihab Uddin All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
   </body>
 </html>
